# FlyMotion

./: Agent.md  Mapping.txt  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml  tree.txt
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/core/: stabilization_pipeline.cpp  stabilization_pipeline.h  video_stabilizer.cpp  video_stabilizer.h
app/src/main/cpp/export/: video_writer.cpp  video_writer.h
app/src/main/cpp/jni/: jni_utils.cpp  jni_utils.h  native_frame_jni.cpp  native_motion_jni.cpp  native_stabilizer_jni.cpp
app/src/main/cpp/motion/: motion_estimator.cpp  motion_estimator.h  motion_smoother.cpp  motion_smoother.h  trajectory.cpp  trajectory.h
app/src/main/cpp/render/: gl_renderer.cpp  gl_renderer.h  shader_utils.cpp
app/src/main/cpp/transform/: cropper.cpp  cropper.h  frame_transform.cpp  frame_transform.h
app/src/main/kotlin/com/fly/motion/activity/: FlymoActivity.kt
app/src/main/kotlin/com/fly/motion/config/: AppConfig.kt  PerformanceProfile.kt  StabilizationPreset.kt
app/src/main/kotlin/com/fly/motion/exception/: ExportException.kt  NativeException.kt  StabilizationException.kt
app/src/main/kotlin/com/fly/motion/export/: ExportConfig.kt  MuxerWrapper.kt  (+3 more)
app/src/main/res/drawable/: ic_export.xml  ic_play.xml  ic_stabilize.xml
app/src/main/res/layout/: activity_editor.xml  activity_main.xml  view_loading.xml  view_stabilization_controls.xml  view_timeline.xml
app/src/main/res/values/: dimens.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
(+63 files in other folders)
